--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="serviceworker" href="/service-worker.js" />
+    <link rel="serviceworker" href="/pwa-cleanarch-githubpages/service-worker.js" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PWA GitHub Pages</title>
